# pfms-support

./: 10-local.list  FAQ.md  INSTALLATION.md  LICENSE  README.md  VERSIONS.md
pfms-ros/audibot/: rosdep_list.yaml
pfms-ros/audibot/audibot_description/: package.xml
pfms-ros/audibot/audibot_description/urdf/: audibot.urdf.xacro
pfms-ros/audibot/audibot_gazebo/: CMakeLists.txt  package.xml
pfms-ros/audibot/audibot_gazebo/launch/: audibot_robot.launch.py  single_vehicle_example.launch  single_vehicle_example.launch.py
pfms-ros/audibot/audibot_gazebo/rviz/: single_vehicle_example.rviz
pfms-ros/audibot/audibot_gazebo/scripts/: tf_prefixer.py
pfms-ros/audibot/audibot_gazebo/src/: AudibotInterfacePlugin.cpp
pfms-ros/gazebo_tf/: CMakeLists.txt  package.xml
pfms-ros/gazebo_tf/launch/: .gitignore  a2.launch.py  a3_audi.launch.py  a3_drone.launch.py  a3_project3.launch.py  a3_rescue.launch.py  alternative_a3.launch  audi.launch.py  audi_a2.launch.py  audi_husky.launch.py  audi_track.launch.py  controllers.launch.py  husky.launch.py  multi.launch  multi_goals.launch  quiz4.launch.py  test.launch.py  two_cars.launch  two_cars.launch.py  two_quads.launch  uav.launch  uav_a3.launch  ugv.launch  ugv_a3.launch  ugv_goals.launch  ugv_race.launch
pfms-ros/gazebo_tf/models/: database.config
pfms-ros/gazebo_tf/models/ice_mt_ground/: model.config  model.sdf
pfms-ros/gazebo_tf/models/terrain_1/: model.sdf
pfms-ros/gazebo_tf/models/tower/: model.sdf
pfms-ros/gazebo_tf/rviz/: a1_sup.rviz  a2.rviz  a3_drone.rviz  audi.rviz  audi_husky.rviz  audi_quad.rviz  carcass_design.rviz  current_live.rviz  husky.rviz  husky_s2_3.rviz  live_race.rviz  quiz4.rviz  two_cars.rviz  uav_a3.rviz  ugv.rviz  ugv_a3.rviz
pfms-ros/gazebo_tf/src/: gazebo_connect.cpp  odo.cpp  reach.cpp  ugv_remote.cpp
pfms-ros/gazebo_tf/srv/: GetMinDistToGoal.srv  SetCell.srv  SetGoal.srv  SetGoals.srv
pfms-ros/gazebo_tf/worlds/: a2.world  demo.world  pioneer2dx.world  race_track.world  search_and_rescue.world  terrain_1.world  tower_search_and_rescue.world
pfms-ros/husky/: rosdep_list.yaml
pfms-ros/husky/husky_control/launch/: teleop_launch.py
pfms-ros/husky/husky_description/: CHANGELOG.rst
pfms-ros/husky/husky_description/urdf/: husky.urdf.xacro  husky_macro.urdf.xacro
pfms-ros/husky/husky_gazebo/rviz/: husky.rviz
pfms-ros/pfms/: CHANGELOG.rst  CMakeLists.txt  package.xml
pfms-ros/pfms/launch/: a1.launch.py  a2.launch.py  a3_audi.launch.py  a3_audi_drone.launch  a3_drone.launch.py  a3_project3.launch.py  a3_rescue.launch.py  audi.launch.py  audi_a2.launch.py  audi_husky.launch.py  audi_track.launch.py  controllers.launch.py  husky.launch.py  quiz4.launch.py  two_cars.launch.py
pfms-ros/pfms/models/: database.config
pfms-ros/pfms/models/tower/: model.config
pfms-ros/pfms/rviz/: a2.rviz  audi.rviz  husky.rviz  multi.rviz  two_cars.rviz  two_quads.rviz  uav.rviz  uav_a3.rviz  ugv_race.rviz
pfms-ros/pfms/scripts/: cleanup
pfms-ros/pfms/src/: gazebo_connect.cpp  odo.cpp  reach.cpp
pfms-ros/pfms/worlds/: a2.world  demo.world  ice_mts.world  race_track.world  tower_search_and_rescue.world
pfms-ros/rrbot_description/: CMakeLists.txt  package.xml
pfms-ros/rrbot_description/urdf/: rrbot.gazebo  rrbot2.xacro
pfms-ros/sjtu-drone/: CMakeLists.txt
pfms-ros/sjtu-drone/include/: plugin_ros_sonar.h
pfms-ros/sjtu-drone/launch/: simple.launch
pfms-ros/sjtu-drone/models/construction_cone/: model.config
pfms-ros/sjtu-drone/src/: drone_object_ros.cpp  plugin_drone.cpp  plugin_ros_sonar.cpp
pfms-ros/sjtu-drone/urdf/: sjtu_drone.urdf  sjtu_drone2.urdf
pfms-ros/sjtu-drone/worlds/: fusion.world  race_track.world  search_and_rescue.world  tower_search_and_rescue.world
pfms-ros/sjtu_drone/: rosdep_list.yaml
pfms-ros/sjtu_drone/sjtu_drone_bringup/: package.xml
pfms-ros/sjtu_drone/sjtu_drone_bringup/launch/: sjtu_drone_gazebo.launch.py
pfms-ros/sjtu_drone/sjtu_drone_control/sjtu_drone_control/: teleop.py
pfms-ros/sjtu_drone/sjtu_drone_description/: CMakeLists.txt  package.xml
pfms-ros/sjtu_drone/sjtu_drone_description/include/: plugin_drone.h
pfms-ros/sjtu_drone/sjtu_drone_description/models/sjtu_drone/: sjtu_drone.sdf
pfms-ros/sjtu_drone/sjtu_drone_description/src/: plugin_drone.cpp
pfms-ros/sjtu_drone/sjtu_drone_description/urdf/: sjtu_drone.urdf.xacro
pfms-ros/sjtu_drone/sjtu_drone_description/worlds/: playground.world
