<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gazebo_tf</name>
  <version>0.2.0</version>
  <description>The pfms_connector package makes a bridge between ROS2 and PFMS libraries</description>

  <maintainer email="Alen.Alempijevic@uts.edu.au">Alen Alempijevic</maintainer>
  <license>BSD</license>
  <author email="Alen.Alempijevic@uts.edu.au">Alen Alempijevic</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  
  <!--test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend-->

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>    
  </export>


</package>
